--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F3E7C3"
-    tools:context=".HomePage1">
+    tools:context=".Home">
 
     <ImageView
         android:id="@+id/imageView2"
@@ -52,6 +52,7 @@
         app:layout_constraintVertical_bias="0.087" />
 
     <Button
+        android:id="@+id/settings"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:background="@drawable/round_button"
@@ -132,7 +133,7 @@
         app:layout_constraintVertical_bias="0.93" />
 
     <TextView
-        android:id="@+id/about"
+        android:id="@+id/connectAs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Politycorrect@gmail.com"
