add results & propositions

--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -70,7 +70,7 @@
         app:layout_constraintVertical_bias="0.528" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/results"
         android:layout_width="125dp"
         android:layout_height="124dp"
         android:background="@drawable/round_button"
