--- a/app/src/main/res/layout/propositions.xml
+++ b/app/src/main/res/layout/propositions.xml
@@ -23,7 +23,7 @@
         app:layout_constraintHorizontal_bias="0.857"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.102" />
+        app:layout_constraintVertical_bias="0.096" />
 
     <ImageView
         android:id="@+id/logo"
@@ -45,12 +45,33 @@
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.608">
+        app:layout_constraintVertical_bias="0.64">
 
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/linearLayout0"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/voteBtn0"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
+
+                <TextView
+                    android:id="@+id/proposition0"
+                    android:layout_width="239dp"
+                    android:layout_height="wrap_content"
+                    android:text="חוק"
+                    android:textDirection="rtl"
+                    android:textSize="34sp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/linearLayout1"
@@ -61,8 +82,8 @@
                     android:id="@+id/voteBtn1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition1"
@@ -82,8 +103,8 @@
                     android:id="@+id/voteBtn2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition2"
@@ -103,8 +124,8 @@
                     android:id="@+id/voteBtn3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition3"
@@ -124,8 +145,8 @@
                     android:id="@+id/voteBtn4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition4"
@@ -145,8 +166,8 @@
                     android:id="@+id/voteBtn5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition5"
@@ -166,8 +187,8 @@
                     android:id="@+id/voteBtn6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition6"
@@ -187,8 +208,8 @@
                     android:id="@+id/voteBtn7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition7"
@@ -208,8 +229,8 @@
                     android:id="@+id/voteBtn8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition8"
@@ -229,8 +250,8 @@
                     android:id="@+id/voteBtn9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition9"
@@ -250,8 +271,8 @@
                     android:id="@+id/voteBtn10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition10"
@@ -271,32 +292,11 @@
                     android:id="@+id/voteBtn11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
+                    android:text="הצבע"
+                    android:textDirection="rtl"></Button>
 
                 <TextView
                     android:id="@+id/proposition11"
-                    android:layout_width="239dp"
-                    android:layout_height="wrap_content"
-                    android:text="חוק"
-                    android:textDirection="rtl"
-                    android:textSize="34sp" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/linearLayout12"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:id="@+id/voteBtn12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textDirection="rtl"
-                    android:text="הצבע"></Button>
-
-                <TextView
-                    android:id="@+id/proposition12"
                     android:layout_width="239dp"
                     android:layout_height="wrap_content"
                     android:text="חוק"
