--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -133,12 +133,13 @@
         app:layout_constraintVertical_bias="0.93" />
 
     <TextView
-        android:id="@+id/connectAs"
+        android:id="@+id/connectUs"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/alef"
         android:text="Politycorrect@gmail.com"
         android:textSize="16sp"
-        android:fontFamily="@font/alef"
+        android:textStyle="normal|bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.873"
