--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -102,4 +102,16 @@
         app:layout_constraintVertical_bias="0.976"
         tools:ignore="OnClick" />
 
+   <Button
+       android:id="@+id/signin"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:text="הרשם"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.148"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintVertical_bias="0.556" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
