--- a/app/src/main/res/layout/signin.xml
+++ b/app/src/main/res/layout/signin.xml
@@ -96,9 +96,11 @@
         app:srcCompat="@drawable/logo" />
 
     <Button
-        android:id="@+id/register"
+        android:id="@+id/OK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onClickOK"
+        android:text="אישור"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.095"
